--- a/log.html
+++ b/log.html
@@ -1803,25 +1803,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,5151],[],[[4,0,0,[],[1,237,4909],[[0,5,0,0,0,0,0,0,[1,239,3688],[[0,6,7,0,8,9,0,0,[1,239,3687],[[240,2,10]]]]],[0,11,0,0,0,0,0,0,[1,3929,994],[[0,12,7,0,13,14,0,0,[1,3930,220],[[3931,2,15]]],[0,12,7,0,13,16,0,0,[1,4150,182],[[4151,2,17]]],[0,12,7,0,13,18,0,0,[1,4333,207],[[4333,2,19]]],[0,12,7,0,13,20,0,0,[1,4540,189],[[4541,2,21]]],[0,12,7,0,13,22,0,0,[1,4729,193],[[4730,2,23]]]]],[0,24,0,0,0,0,0,0,[1,4923,105],[[0,25,7,0,26,27,0,0,[1,4924,104],[[4925,2,28]]]]],[0,29,0,0,0,0,0,0,[1,5029,116],[[0,30,7,0,31,0,0,0,[1,5030,114],[]]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,11223],[],[[4,0,0,[],[1,999,10221],[[0,5,0,0,0,0,0,0,[1,1001,4589],[[0,6,7,0,8,9,0,0,[1,1002,4587],[[1002,2,10]]]]],[0,11,0,0,0,0,0,0,[1,5590,5386],[[0,12,7,0,13,14,0,0,[1,5591,211],[[5592,2,15]]],[0,16,17,0,18,19,0,0,[1,5803,1001],[[6804,2,20]]],[0,12,7,0,13,21,0,0,[1,6805,174],[[6806,2,22]]],[0,16,17,0,18,19,0,0,[1,6979,1001],[[7980,2,20]]],[0,12,7,0,13,23,0,0,[1,7981,435],[[7982,2,24]]],[0,16,17,0,18,19,0,0,[1,8417,1001],[[9418,2,20]]],[0,12,7,0,13,25,0,0,[1,9418,349],[[9419,2,26]]],[0,16,17,0,18,19,0,0,[1,9767,1001],[[10768,2,20]]],[0,12,7,0,13,27,0,0,[1,10768,208],[[10769,2,28]]]]],[0,29,0,0,0,0,0,0,[1,10977,112],[[0,30,7,0,31,32,0,0,[1,10978,111],[[10979,2,33]]]]],[0,34,0,0,0,0,0,0,[1,11093,127],[[0,35,7,0,36,0,0,0,[1,11095,124],[]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Form","*/home/mmc/Robot/robot2/form.robot","*form.robot","*Cenario 1: Preencher Formulario","*abrir navegador acessar site","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","eNqzSVTIKEpNs1XKKCkpKLbS188sSS1K1C1M1EusKi1KLU9NKgaKFOvlpZboZ+Tnpuonlpbk5yaWZObnKdmRrsdGP9FORyE5owgoDAD8di2k","eNqVy8ENwjAMBdBVrF5yanxHpSswg4M+JFIbF9tRJaanK3B90nsc6K2/qZieDqP0rKY7EoVSEQcN2ygtQtXwuk814vAbcwuYzB/J8h2GE8Uv8dwRXK/OMkJ3iaZ9Wv8/C8ua8g8a6DiH","*preencher campos","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${input_name}, Marcio Cardoso","*Typing text 'Marcio Cardoso' into text field 'id=name'.","*${input_phone}, 53984544760","*Typing text '53984544760' into text field 'id=phone'.","*${input_email}, marciodalu@gmail.com","*Typing text 'marciodalu@gmail.com' into text field 'id=email'.","*${input_password}, 123456","*Typing text '123456' into text field 'id=password'.","*${textarea_adress}, Rua Dom Luis de Nadal 168","*Typing text 'Rua Dom Luis de Nadal 168' into text field 'id=address'.","*clicar em submit","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*${button_submit}","*Clicking element 'name:submit'.","*fechar navegador","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Form","*/home/mmc/Robot/robot2/form.robot","*form.robot","*Cenario 1: Preencher Formulario","*abrir navegador acessar site","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","eNqzSVTIKEpNs1XKKCkpKLbS188sSS1K1C1M1EusKi1KLU9NKgaKFOvlpZboZ+Tnpuonlpbk5yaWZObnKdmRrsdGP9FORyE5owgoDAD8di2k","eNqVy8ENwjAMBdBVrF5yanxHpSswg4M+JFIbF9tRJaanK3B90nsc6K2/qZieDqP0rKY7EoVSEQcN2ygtQtXwuk814vAbcwuYzB/J8h2GE8Uv8dwRXK/OMkJ3iaZ9Wv8/C8ua8g8a6DiH","*preencher campos","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${input_name}, Marcio Cardoso","*Typing text 'Marcio Cardoso' into text field 'id=name'.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*1s","*Slept 1 second","*${input_phone}, 53984544760","*Typing text '53984544760' into text field 'id=phone'.","*${input_email}, marciodalu@gmail.com","*Typing text 'marciodalu@gmail.com' into text field 'id=email'.","*${input_password}, 123456","*Typing text '123456' into text field 'id=password'.","*${textarea_adress}, Rua Dom Luis de Nadal 168","*Typing text 'Rua Dom Luis de Nadal 168' into text field 'id=address'.","*clicar em submit","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*${button_submit}","*Clicking element 'name:submit'.","*fechar navegador","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:05","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Form","name":"Form","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:10","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"Form","name":"Form","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1648897990531;
+window.output["baseMillis"] = 1648906298557;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 5177;
+window.output["generated"] = 11245;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
